src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
    font-family: "Montserrat", BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;

}

.link-underline {
    border-bottom-width: 0;
    background-image: linear-gradient(transparent, transparent), linear-gradient(#fff, #fff);
    background-size: 0 3px;
    background-position: 0 100%;
    background-repeat: no-repeat;
    transition: background-size .5s ease-in-out;
}

.link-underline-black {
    background-image: linear-gradient(transparent, transparent), linear-gradient(#1F55AD, #1F55AD)
}

.link-underline:hover {
    background-size: 100% 3px;
    background-position: 0 100%
}

.link-underline.current {
    background-size: 100% 3px;
    background-position: 0 100%;
    font-weight: bold;
}

* {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

/* Formatting Headers */
@layer base {
    h1 {
        @apply text-6xl font-semibold;
    }

    h2 {
        @apply text-4xl font-semibold mb-2;
    }
}

@layer components {
    .btn-sapphire {
        @apply bg-sapphire hover:bg-sapphire-darker text-white font-semibold py-2 px-4 rounded;
    }
}

a {
    color: inherit;
    text-decoration: none;
}

* {
    box-sizing: border-box;
}

